fix spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -29,7 +29,8 @@ h2 {
   color: white;
   font-size: 40px;
   margin-top: 10vmin;
-  letter-spacing: 50px;
+  margin-left: 30px;
+  letter-spacing: 35px;
 }
 
 h3 {
